[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/SecretPersonalMemo.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/black_list.png" type="Texture" id=2]
[ext_resource path="res://scenes/SecretPersonnelMemoDialog.gd" type="Script" id=3]
[ext_resource path="res://fonts/mogihaPen_ver120/mogihaPen.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[node name="SecretPersonnelMemoDialog" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.235294, 0.235294, 0.890196 )
script = ExtResource( 3 )

[node name="WhiteList" parent="." instance=ExtResource( 1 )]
margin_left = 192.0
margin_top = 128.0
margin_right = 694.0
margin_bottom = 824.0

[node name="BlackList" parent="." instance=ExtResource( 1 )]
margin_left = 1216.0
margin_top = 128.0
margin_right = 1718.0
margin_bottom = 824.0
texture = ExtResource( 2 )

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -184.0
margin_right = 72.0
margin_bottom = -104.0
custom_fonts/font = SubResource( 1 )
text = "Exit"

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
